feat: 新增後台聊天室總覽
